crates/fig-parser/tests/snapshots/integration_tests__enums__single_variant.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Default
      annotations: []
      name:
        segments:
          - One
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: ONLY
          value: ~
  - Enum:
      visibility: Default
      annotations: []
      name:
        segments:
          - SingleByte
      representation: U8
      generic_params: []
      requires: []
      variants:
        - name: ONLY
          value:
            IntegerLiteral:
              base: Decimal
              digits: "42"
              suffix: ~
