crates/fig-parser/tests/snapshots/integration_tests__enums__visibility.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Public
      annotations: []
      name:
        segments:
          - Visibility
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: PUBLIC
          value: ~
        - name: PRIVATE
          value: ~
        - name: PROTECTED
          value: ~
  - Enum:
      visibility: Export
      annotations: []
      name:
        segments:
          - ExportedStatus
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: ACTIVE
          value:
            IntegerLiteral:
              base: Decimal
              digits: "0"
              suffix: ~
        - name: INACTIVE
          value:
            IntegerLiteral:
              base: Decimal
              digits: "1"
              suffix: ~
        - name: PENDING
          value:
            IntegerLiteral:
              base: Decimal
              digits: "2"
              suffix: ~
