crates/fig-parser/tests/snapshots/integration_tests__enums__with_annotations.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Default
      annotations:
        - name: repr
          args:
            - Path:
                segments:
                  - C
      name:
        segments:
          - CEnum
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: FIRST
          value: ~
        - name: SECOND
          value: ~
        - name: THIRD
          value: ~
  - Enum:
      visibility: Default
      annotations:
        - name: derive
          args:
            - Path:
                segments:
                  - Debug
            - Path:
                segments:
                  - Clone
      name:
        segments:
          - Season
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: SPRING
          value:
            IntegerLiteral:
              base: Decimal
              digits: "0"
              suffix: ~
        - name: SUMMER
          value:
            IntegerLiteral:
              base: Decimal
              digits: "1"
              suffix: ~
        - name: AUTUMN
          value:
            IntegerLiteral:
              base: Decimal
              digits: "2"
              suffix: ~
        - name: WINTER
          value:
            IntegerLiteral:
              base: Decimal
              digits: "3"
              suffix: ~
