crates/fig-parser/tests/snapshots/integration_tests__enums__with_requires.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Default
      annotations: []
      name:
        segments:
          - Error
      representation: U8
      generic_params: []
      requires:
        - Path:
            path:
              segments:
                - Display
            generic_args: []
        - Path:
            path:
              segments:
                - Debug
            generic_args: []
      variants:
        - name: NONE
          value:
            IntegerLiteral:
              base: Decimal
              digits: "0"
              suffix: ~
        - name: IO_ERROR
          value:
            IntegerLiteral:
              base: Decimal
              digits: "1"
              suffix: ~
        - name: PARSE_ERROR
          value:
            IntegerLiteral:
              base: Decimal
              digits: "2"
              suffix: ~
        - name: NOT_FOUND
          value:
            IntegerLiteral:
              base: Decimal
              digits: "3"
              suffix: ~
